very ugly and quick pagination overflow fix 2

--- a/home.less
+++ b/home.less
@@ -259,10 +259,10 @@ header {
 	}
 
 	#paginationList{
-		border: 1px solid @mainColor;
-		color: white;
-		background: @mainColorLight;
-		.border-radius(3px);
+		// border: 1px solid @mainColor;
+		// color: white;
+		// background: @mainColorLight;
+		// .border-radius(3px);
 		margin-right: .5em;
 		display: flex;
 		align-items: center;
@@ -275,8 +275,17 @@ header {
 			cursor: pointer;
 			font-size: .9em;
 
+			border: 1px solid @mainColor;
+			color: white;
+			background: @mainColorLight;
+			.border-radius(3px);
+			margin-right: .5em;
+			margin-bottom: .5em;
+
 			&:last-child{
-				border-right: 0;
+				// border-right: 0;
+
+				margin-right: 0;
 			}
 
 			&:hover{
